--- a/assets/sass/_variables.scss
+++ b/assets/sass/_variables.scss
@@ -1,8 +1,8 @@
 $brand-primary: #0199ba;
 $brand-secondary: #000000;
 $background: #ffffff;
-$font-family: 'Libre Franklin', Helvetica, sans-serif;
-$font-heading: 'Libre Franklin', Helvetica, sans-serif;
+$font-family: 'LRoboto', Helvetica, sans-serif;
+$font-heading: 'Roboto', Helvetica, sans-serif;
 $font-colour: #333333;
 $font-body-size: 1rem;
 $font-h1: 1.8rem;
